fix TeX mapping for light/black fonts

--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -131,38 +131,44 @@
         UprightFont=*-Light,
         BoldFont=*-Regular,
         ItalicFont=*-LightItalic,
-        BoldItalicFont=*-Italic]
+        BoldItalicFont=*-Italic,
+        Ligatures=TeX]
     \newfontfamily\rmblackfamily{Merriweather}[
         NFSSFamily=rmblack,
         UprightFont=*-Black,
         BoldFont=*-Black,
         ItalicFont=*-BlackItalic,
-        BoldItalicFont=*-BlackItalic]
+        BoldItalicFont=*-BlackItalic,
+        Ligatures=TeX]
     %\newfontfamily\sflightfamily{OpenSans}[
     %    NFSSFamily=sflight,
     %    UprightFont=*-Light,
     %    BoldFont=*-SemiBold,
     %    ItalicFont=*-LightItalic,
-    %    BoldItalicFont=*-SemiBoldItalic]
+    %    BoldItalicFont=*-SemiBoldItalic,
+    %    Ligatures=TeX]
     %\newfontfamily\sfblackfamily{OpenSans}[
     %    NFSSFamily=sfblack,
     %    UprightFont=*-ExtraBold,
     %    BoldFont=*-ExtraBold,
     %    ItalicFont=*-ExtraBoldItalic,
-    %    BoldItalicFont=*-ExtraBoldItalic]
+    %    BoldItalicFont=*-ExtraBoldItalic,
+    %    Ligatures=TeX]
     \newfontfamily\sflightfamily{PublicSans}[
         NFSSFamily=sflight,
         UprightFont=*-Thin,
         BoldFont=*-Medium,
         ItalicFont=*-ThinItalic,
-        BoldItalicFont=*-MediumItalic]
+        BoldItalicFont=*-MediumItalic,
+        Ligatures=TeX]
     \newfontfamily\sfblackfamily{PublicSans}[
         NFSSFamily=sfblack,
         %LetterSpace=1.0,
         UprightFont=*-ExtraBold,
         BoldFont=*-Black,
         ItalicFont=*-ExtraBoldItalic,
-        BoldItalicFont=*-BlackItalic]
+        BoldItalicFont=*-BlackItalic,
+        Ligatures=TeX]
     \ifbool{jkubeamer@compactmono}{%
         \newfontfamily\ttlightfamily{InconsolataCondensed}[
             NFSSFamily=ttlight,
