--- a/main.tex
+++ b/main.tex
@@ -69,7 +69,7 @@
 %%  * c    ... Vertically center text on slides by default. You should avoid using this
 %%             option. Only use this to restore the behavior of older versions of this theme.
 %% 
-%% _Important_: The document class should be the first like of LaTeX code in your main
+%% _Important_: The document class should be the first line of LaTeX code in your main
 %% source file. Do not place anything but comments / magic comments above that line (unless
 %% you really know what you are doing).
 %% 
