part title frame should be a plain frame

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -1161,7 +1161,7 @@
         \begingroup%
         \framecolormode{#1}%
         \usebeamercolor[fg]{background canvas}%
-        \begin{frame}%
+        \begin{frame}[plain]%
         \usebeamertemplate{part page}%
         \end{frame}
         %\addtocounter{framenumber}{-1}
