define footnote style

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -244,6 +244,8 @@
 \setbeamercolor*{section in head/foot}{parent=footline}
 \setbeamercolor*{page number in head/foot}{parent=section in head/foot}
 \setbeamercolor*{date in head/foot}{parent=section in head/foot}
+\setbeamercolor*{footnote}{parent=normal text}
+\setbeamercolor*{footnote mark}{parent=normal text}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -281,6 +283,8 @@
 \setbeamercolor*{bibliography item}{parent=normal text}
 \setbeamercolor*{bibliography entry author}{parent=normal text}
 \setbeamercolor*{bibliography entry title}{parent=normal text}
+\setbeamercolor*{bibliography entry location}{parent=normal text}
+\setbeamercolor*{bibliography entry note}{parent=normal text}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
