--- a/beamerfontthemejku.sty
+++ b/beamerfontthemejku.sty
@@ -313,6 +313,8 @@
 \setbeamerfont*{section in head/foot}{parent=structure, size*={6pt}{7pt}}
 \setbeamerfont*{page number in head/foot}{parent=section in head/foot}
 \setbeamerfont*{date in head/foot}{parent=section in head/foot}
+\setbeamerfont*{footnote}{parent=normal text, size*={8pt}{9.6pt}}
+\setbeamerfont*{footnote mark}{parent=normal text, size*={6pt}{7pt}}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -350,6 +352,8 @@
 \setbeamerfont*{bibliography item}{parent=normal text}
 \setbeamerfont*{bibliography entry author}{parent=normal text}
 \setbeamerfont*{bibliography entry title}{parent=normal text}
+\setbeamerfont*{bibliography entry location}{parent=normal text}
+\setbeamerfont*{bibliography entry note}{parent=normal text}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
