--- a/references.bib
+++ b/references.bib
@@ -1,17 +1,15 @@
 @misc{schultz,
 	author = {Schultz, David M.},
-	title = {Do you end with a `thank you' or `questions?' slide?},
+	title = {{Do you end with a `thank you' or `questions?' slide?}},
 	month = FEB,
 	year = {2011},
-	url = {https://eloquentscience.com/2011/02/do-you-end-with-a-thank-you-or-questions-slide/},
-	howpublished = {\url{https://eloquentscience.com/2011/02/do-you-end-with-a-thank-you-or-questions-slide/}},
+	url = {https://eloquentscience.com/2011/02/do-you-end-with-a-thank-you-or-questions-slide/}
 }
 
 @misc{karol,
 	author = {{Karol K.}},
-	title = {2 Slides That are Ruining Your Damn PowerPoint Presentation},
+	title = {{2 Slides That are Ruining Your Damn PowerPoint Presentation}},
 	month = OCT,
 	year = {2015},
-	url = {https://newinternetorder.com/2-slides-that-are-ruining-your-damn-powerpoint-presentation/},
-	howpublished = {\url{https://newinternetorder.com/2-slides-that-are-ruining-your-damn-powerpoint-presentation/}},
+	url = {https://newinternetorder.com/2-slides-that-are-ruining-your-damn-powerpoint-presentation/}
 }
