align defaults with official style expectations

--- a/main.tex
+++ b/main.tex
@@ -206,14 +206,15 @@
 %% Command \author[short authors]{authors}: sets the presentation authors (multiple authors may be separated with \and)
 \author{Space for speaker names}
 
-%% Command \institute{name}: sets the institute / author affiliation
-\institute{Space for institute name}
+%% Command \institute{name}: sets the institute / author affiliation (style-breaking)
+%\institute{Space for institute name}
 
 %% Command \institutecode{CODE}: sets the institute abbreviation/initials (used to load the institute logo file, if present)
 %\institutecode{INS}
 
 %% Command \date[short date]{date}: sets the presentation date (short date is used in the footer by default)
-\date{\today}
+%\date{\today}  % use this to set the date on the title page (style-breaking) and in the footer
+\date[\today]{} % use this to set the date except for the title page (effectively in the footer only)
 
 %% Command \partnerlogo[white=filename]{filename}: use filename as partner logo (leave filename blank to disable the partner logo), the optional argument ``white='' defines a separate file for use on dark background
 %\partnerlogo{our_partner_logo}
