add missing documentation

--- a/main.tex
+++ b/main.tex
@@ -129,6 +129,7 @@
 %%  * frametitlecaps ... Set frame titles in capital letters (like in eariler theme versions).
 %%  * nofancyfonts   ... Do not use custom TTF fonts with XeTeX / supress pdfLaTeX warning.
 %%  * mac            ... Use adapted color palette for screen display on Mac.
+%%  * legacyitemizestyle ... Use old bullet style in itemization.
 %% 
 %% Experimental options:
 %%  * mathastext ... Use standard document fonts (and default to sans-serif font) in math mode
