--- a/main.tex
+++ b/main.tex
@@ -1162,7 +1162,7 @@ Use the theme colors to generate colorful blocks.
 
 \begin{itemize}
 \item You can generate a ``handout'' version of your presentation with the class option \textverb{handout}.
-\item Section slides and logo slides will be supressed.
+\item Section slides and logo slides will be suppressed.
 \item Overlays will be flattened into single pages.
 \item Slide numbering will still match the numbering in the non-handout version.
 \end{itemize}
