properly inherit font size and color for \emph-like commands (e.g. in frame title)

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -199,10 +199,10 @@
 %% Normal style
 %% 
 \setbeamercolor*{normal text}{parent=palette primary}
-\setbeamercolor*{structure}{parent=normal text}
-\setbeamercolor*{alerted text}{parent=normal text,fg=jkuRed}
-\setbeamercolor*{example text}{parent=normal text,fg=jkuGreen}
-\setbeamercolor*{emphasized text}{parent=normal text}
+\setbeamercolor*{structure}{fg=}
+\setbeamercolor*{alerted text}{fg=jkuRed}
+\setbeamercolor*{example text}{fg=jkuGreen}
+\setbeamercolor*{emphasized text}{fg=}
 %% 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
