consistent spelling of address

--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -769,7 +769,7 @@
         \begingroup
         \usebeamerfont{imprint address}%
         \usebeamercolor[fg]{imprint address}%
-        Altenbergerstra{\ss}e 69\\
+        Altenberger Stra{\ss}e 69\\
         4040 Linz, Austria\\
         \endgroup
         \begingroup
