--- a/beamerthemejku.sty
+++ b/beamerthemejku.sty
@@ -2,7 +2,7 @@
 %% 
 %% LaTeX Beamer Theme for Johannes Kepler University Linz
 %% 
-%% Copyright (C) 2021  Michael Roland
+%% Copyright (C) 2021-2022  Michael Roland
 %% 
 %% This is a rewrite of the JKU theme originally by
 %% Susanne Hametner, Doris Pargfrieder, and Pieter-Jan Hoedt.
