add author contact information frame type

--- a/beamercolorthemejku.sty
+++ b/beamercolorthemejku.sty
@@ -252,6 +252,20 @@
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %% 
+%% Contact frames
+%% 
+\setbeamercolor*{contacttitle}{parent=title}
+\setbeamercolor*{contactsubtitle}{parent=contacttitle}
+\setbeamercolor*{contactinfo}{parent=normal text}
+\setbeamercolor*{contactinfo icon}{parent=contactinfo}
+\setbeamercolor*{acknowledgement}{parent=normal text}
+%% 
+%% 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%% 
 %% Itemization and enumeration
 %% 
 \setbeamercolor*{item}{parent=normal text}
